--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<app-header></app-header>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<router-outlet></router-outlet>
+			<!-- <app-recipes *ngIf = "menuLoaded =='recipe'"></app-recipes>
+			<app-shopping-list *ngIf = "menuLoaded!=='recipe'"></app-shopping-list>	 -->		
+		</div>
+	</div>
+</div>
+
+<!--  
+   -->
